[gd_scene load_steps=88 format=3 uid="uid://ijtmnukpqd37"]

[ext_resource type="Script" path="res://Scenes/Necromancer/necromancer.gd" id="1_ev4re"]
[ext_resource type="Texture2D" uid="uid://btl32oosh61n7" path="res://Assets/Necromancer_creativekind-Sheet.png" id="1_rai2l"]
[ext_resource type="Script" path="res://Scenes/Necromancer/mobn_health_n.gd" id="2_2t5po"]
[ext_resource type="Texture2D" uid="uid://cfglbm66xqp13" path="res://Assets/Pixel Health Bar/Bar/no health bar.png" id="3_bynwg"]
[ext_resource type="Texture2D" uid="uid://c6sj7a6merl14" path="res://Assets/Pixel Health Bar/Health/health.png" id="4_tjifx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w80py"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1eeu"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohvp5"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eamy"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmesc"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ulkk"]
atlas = ExtResource("1_rai2l")
region = Rect2(800, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2aaw"]
atlas = ExtResource("1_rai2l")
region = Rect2(960, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ualo"]
atlas = ExtResource("1_rai2l")
region = Rect2(1120, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfhd8"]
atlas = ExtResource("1_rai2l")
region = Rect2(1280, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_43725"]
atlas = ExtResource("1_rai2l")
region = Rect2(1440, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oaoj5"]
atlas = ExtResource("1_rai2l")
region = Rect2(1600, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhs1p"]
atlas = ExtResource("1_rai2l")
region = Rect2(1760, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iks4q"]
atlas = ExtResource("1_rai2l")
region = Rect2(1920, 384, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_psi8d"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef8tr"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vcpc"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfbfs"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yoo2"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mukt"]
atlas = ExtResource("1_rai2l")
region = Rect2(800, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7m6t"]
atlas = ExtResource("1_rai2l")
region = Rect2(960, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tkx8"]
atlas = ExtResource("1_rai2l")
region = Rect2(1120, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_htw54"]
atlas = ExtResource("1_rai2l")
region = Rect2(1280, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_e51n5"]
atlas = ExtResource("1_rai2l")
region = Rect2(1440, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5neet"]
atlas = ExtResource("1_rai2l")
region = Rect2(1600, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nscd"]
atlas = ExtResource("1_rai2l")
region = Rect2(1760, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb4na"]
atlas = ExtResource("1_rai2l")
region = Rect2(1920, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ak3fe"]
atlas = ExtResource("1_rai2l")
region = Rect2(2080, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_16vpe"]
atlas = ExtResource("1_rai2l")
region = Rect2(2240, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gqwc"]
atlas = ExtResource("1_rai2l")
region = Rect2(2400, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar4eg"]
atlas = ExtResource("1_rai2l")
region = Rect2(2560, 512, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5s7t"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha1ce"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4s8b"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqrrg"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3dt5"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e822"]
atlas = ExtResource("1_rai2l")
region = Rect2(800, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ishia"]
atlas = ExtResource("1_rai2l")
region = Rect2(960, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q058o"]
atlas = ExtResource("1_rai2l")
region = Rect2(1120, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ikpw"]
atlas = ExtResource("1_rai2l")
region = Rect2(1280, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_if5x3"]
atlas = ExtResource("1_rai2l")
region = Rect2(1440, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uquo"]
atlas = ExtResource("1_rai2l")
region = Rect2(1600, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtdpa"]
atlas = ExtResource("1_rai2l")
region = Rect2(1760, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiwfx"]
atlas = ExtResource("1_rai2l")
region = Rect2(1920, 256, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n20ca"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec4uf"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8atil"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oca21"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt87e"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6a3w"]
atlas = ExtResource("1_rai2l")
region = Rect2(800, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpy1q"]
atlas = ExtResource("1_rai2l")
region = Rect2(960, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6oema"]
atlas = ExtResource("1_rai2l")
region = Rect2(1120, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_32tae"]
atlas = ExtResource("1_rai2l")
region = Rect2(1280, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t02x"]
atlas = ExtResource("1_rai2l")
region = Rect2(1440, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojl4y"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_32t71"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xalsc"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xme2"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_16ycu"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xewn"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvblc"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb70t"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kibb1"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0707"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ykp"]
atlas = ExtResource("1_rai2l")
region = Rect2(800, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_myclg"]
atlas = ExtResource("1_rai2l")
region = Rect2(960, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6xy3"]
atlas = ExtResource("1_rai2l")
region = Rect2(1120, 0, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsl21"]
atlas = ExtResource("1_rai2l")
region = Rect2(0, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayk7l"]
atlas = ExtResource("1_rai2l")
region = Rect2(160, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcrvf"]
atlas = ExtResource("1_rai2l")
region = Rect2(320, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3yty"]
atlas = ExtResource("1_rai2l")
region = Rect2(480, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpa3u"]
atlas = ExtResource("1_rai2l")
region = Rect2(640, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yvwf"]
atlas = ExtResource("1_rai2l")
region = Rect2(800, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0jes"]
atlas = ExtResource("1_rai2l")
region = Rect2(960, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi0hi"]
atlas = ExtResource("1_rai2l")
region = Rect2(1120, 128, 160, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ylc6a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w80py")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1eeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohvp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eamy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmesc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ulkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2aaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ualo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfhd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43725")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oaoj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhs1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iks4q")
}],
"loop": false,
"name": &"ATTACK1",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_psi8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef8tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vcpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfbfs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yoo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mukt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7m6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tkx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htw54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e51n5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5neet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nscd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb4na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ak3fe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16vpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gqwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar4eg")
}],
"loop": false,
"name": &"ATTACK2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5s7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha1ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4s8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqrrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3dt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e822")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ishia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q058o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ikpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_if5x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uquo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtdpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiwfx")
}],
"loop": false,
"name": &"ATTACK3",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n20ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec4uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8atil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oca21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt87e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6a3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpy1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6oema")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32tae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t02x")
}],
"loop": false,
"name": &"DEATH",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojl4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32t71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xalsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xme2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16ycu")
}],
"loop": false,
"name": &"HIT",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xewn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvblc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb70t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kibb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0707")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ykp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myclg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6xy3")
}],
"loop": true,
"name": &"IDLE",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsl21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayk7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcrvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3yty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpa3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yvwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0jes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi0hi")
}],
"loop": true,
"name": &"MOVE",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c1d3l"]
size = Vector2(50, 96)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hdjnn"]
radius = 23.0
height = 80.0

[sub_resource type="Animation" id="Animation_4cagp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-28, -79)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eks7q"]
resource_name = "damage_text"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-28, -79), Vector2(-28, -200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_de66j"]
_data = {
"RESET": SubResource("Animation_4cagp"),
"damage_text": SubResource("Animation_eks7q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e42om"]
size = Vector2(11.4197, 400)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4m7xk"]
size = Vector2(10, 364)

[node name="Necromancer" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_ev4re")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -51)
scale = Vector2(1.92969, 1.92969)
sprite_frames = SubResource("SpriteFrames_ylc6a")
animation = &"DEATH"
autoplay = "IDLE"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_c1d3l")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_hdjnn")

[node name="MobHealth_n" type="Node2D" parent="."]
position = Vector2(0, -63)
scale = Vector2(0.231018, 0.210428)
script = ExtResource("2_2t5po")

[node name="TextureProgressBar" type="TextureProgressBar" parent="MobHealth_n"]
self_modulate = Color(1, 1, 1, 0.686275)
offset_left = -159.0
offset_top = -34.0
offset_right = 162.0
offset_bottom = 42.0
max_value = 600.0
value = 600.0
nine_patch_stretch = true
texture_under = ExtResource("3_bynwg")
texture_progress = ExtResource("4_tjifx")

[node name="Label" type="Label" parent="MobHealth_n"]
offset_left = -28.0
offset_top = -79.0
offset_right = 29.0
offset_bottom = -10.0
theme_override_colors/font_color = Color(1, 0.245241, 0.187845, 0.898039)
theme_override_font_sizes/font_size = 50
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MobHealth_n"]
libraries = {
"": SubResource("AnimationLibrary_de66j")
}

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(240, 260)
rotation = -0.523599
shape = SubResource("RectangleShape2D_e42om")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="HitBox/CollisionShape2D"]
visible = false
rotation = -1.57512
scale = Vector2(3.29928, 1.28136)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HitBox"]
position = Vector2(140, 260)
rotation = -0.523599
shape = SubResource("RectangleShape2D_e42om")
disabled = true

[node name="Sprite2D2" type="Sprite2D" parent="HitBox/CollisionShape2D3"]
visible = false
position = Vector2(-0.850128, -0.526577)
rotation = -1.5662
scale = Vector2(3.36987, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-240, 260)
rotation = 0.523599
shape = SubResource("RectangleShape2D_e42om")
disabled = true

[node name="Sprite2D3" type="Sprite2D" parent="HitBox/CollisionShape2D2"]
visible = false
position = Vector2(-0.832197, 0.554487)
rotation = -1.57234
scale = Vector2(3.32609, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-140, 260)
rotation = 0.523599
shape = SubResource("RectangleShape2D_e42om")
disabled = true

[node name="Sprite2D4" type="Sprite2D" parent="HitBox/CollisionShape2D4"]
visible = false
position = Vector2(1.1099, -1.94116)
rotation = -1.5717
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="HitBox2" type="Area2D" parent="."]
position = Vector2(-164, 260)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D5" type="Sprite2D" parent="HitBox2/CollisionShape2D"]
visible = false
position = Vector2(0, 1)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(-70, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D5" type="Sprite2D" parent="HitBox2/CollisionShape2D5"]
visible = false
position = Vector2(0, 1)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(70, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D5" type="Sprite2D" parent="HitBox2/CollisionShape2D4"]
visible = false
position = Vector2(0, 1)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(-146, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D6" type="Sprite2D" parent="HitBox2/CollisionShape2D3"]
visible = false
position = Vector2(0, 1)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(-220, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D6" type="Sprite2D" parent="HitBox2/CollisionShape2D7"]
visible = false
position = Vector2(0, 1)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(139, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D6" type="Sprite2D" parent="HitBox2/CollisionShape2D2"]
visible = false
position = Vector2(-1, 0)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="HitBox2"]
position = Vector2(200, 0)
shape = SubResource("RectangleShape2D_4m7xk")
disabled = true

[node name="Sprite2D6" type="Sprite2D" parent="HitBox2/CollisionShape2D6"]
visible = false
position = Vector2(-1, 0)
rotation = 1.57032
scale = Vector2(3.37759, 1)
texture = ExtResource("4_tjifx")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="area_entered" from="HurtBox" to="MobHealth_n" method="_on_hurt_box_area_entered"]
[connection signal="damage_recived" from="MobHealth_n" to="." method="_on_mob_health_n_damage_recived"]
[connection signal="no_hp" from="MobHealth_n" to="." method="_on_mob_health_n_no_hp"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_entered" from="HitBox2" to="." method="_on_hit_box_2_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
